...
    },
    "Answer" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "答える"
          }
        },
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Antworten"
...
    },
    "Close" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "閉じる"
          }
        },
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Schließen"
...
    },
    "Get different questions" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "別の問いをもらう"
          }
        },
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Andere Fragen holen"
...
    },
    "Grow" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "芽を出す"
          }
        },
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Wachsen lassen"
...
    },
    "Plant a new seed" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "新しい種をまく"
          }
        },
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Neuen Samen pflanzen"
...
    },
    "Weekly Review" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "週次レビュー"
          }
        },
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Wochenrückblick"
...
