...
            }
            .padding()
            .navigationTitle("Save to Otanecho")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .cancellationAction) {
                    Button("Cancel", role: .cancel, action: onCancel)
                }
                ToolbarItem(placement: .confirmationAction) {
                    Button(action: onSave) {
                        if model.isSaving {
                            ProgressView()
                        } else {
...
